<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#2F4F4F">

    <RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    >


        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/tankbackground"
            android:id="@+id/main_activity_up"
        />


        <TextView
            android:id="@+id/main_activity_stats"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="@dimen/stat_player"
            android:textColor="#FFDEAD"
            android:text="@string/stats"
        />

        <EditText
            android:id="@+id/main_activity_player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/main_activity_stats"
            android:layout_centerHorizontal="true"
            android:textColor="#FFDEAD"
            android:hint="@string/write_name"
        />

        <!--при загрузке использовать progress bar-->
        <LinearLayout
            android:id="@+id/main_activity_linear_for_buttons"
            android:layout_below="@id/main_activity_player_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
        >

            <Button
                android:id="@+id/main_activity_button_search"
                android:layout_below="@id/main_activity_player_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFDEAD"
                android:text="@string/main_activity_button_search"
                android:onClick="ButtonClickSearch"
                />
            <Button
                android:id="@+id/main_activity_button_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFDEAD"
                android:text="@string/main_activity_button_favorite"
                />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/main_activity_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:visibility="invisible"
            android:layout_toLeftOf="@id/main_activity_linear_for_buttons"
        />

        <com.example.alexander.apiconnector.ViewStatistics
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_below="@id/main_activity_linear_for_buttons"
            xmlns:vs="http://schemas.android.com/apk/res/com.example.alexander.apiconnector"
            android:id="@+id/main_activity_view_statistics"
            android:visibility="invisible"
        />
    </RelativeLayout>
</ScrollView>